# AtomicHabits_docker

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app_habits/: apps.py  models.py  services.py  tasks.py  urls.py
app_habits/management/commands/: send_message.py
app_habits/serializers/: habit.py
app_habits/validators/: habit.py
app_habits/views/: habit.py
app_users/: models.py  permissions.py  urls.py
app_users/management/commands/: ccsu.py  ccusers.py  settg.py
app_users/serializers/: user.py
app_users/views/: user.py
config/: settings.py  urls.py
fixtures/: db.json
tests/: __init__.py  test_good_habit.py  test_habit.py  test_nice_habit.py  test_periodic_task.py  test_user.py
validators/: general_validators.py
